--- a/main.html
+++ b/main.html
@@ -10,8 +10,8 @@
 	  </div>
 	  <div class="right">
 		  <form>
-		  <input type="text" name="Email" id="email" placeholder="Email address or phone number">
-		  <input type="text" name="Password" id="password" placeholder="Password">
+		  <input type="email" name="Email" id="email" placeholder="Email address or phone number">
+		  <input type="password" name="Password" id="password" placeholder="Password">
 		  <button type="submit">Log in</button>
 		  <a href="#">Forgotten account?</a>
 		  <button class="signup">Create new account</button>
